fix scrollbar

--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ button:hover {
 
 .items {
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   margin: 0;
   padding: 0;
